Fix for white space on large screens. Bootstrap was not fluid enough

--- a/css/index.css
+++ b/css/index.css
@@ -90,15 +90,13 @@ body {
 	margin: 0% 5%;
 	padding: 0;
 	background-color: #999;
-}
-
-body.container-fluid {
-	padding: 0;
+	height: 100%;
+	/*border: 5px solid red !important; */
 }
 
 #whitebox {
 	margin: 0%;
-	height: 100%;
+	min-height: 100%;
 	padding: 0%;
 	background-color: white;
 }
@@ -110,6 +108,8 @@ body.container-fluid {
 html {
 	margin: 0;
 	padding: 0;
+	/*border: 5px solid green !important;*/
+	height: 100% !important;
 }
 
 .font1, h2 {
